# attachmentsv3

./: .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: _quarto.yml  getting-started.qmd  index.qmd  objects.json
docs/guides/: index.qmd
docs/reference/: _sidebar.yml  index.qmd  testy.qmd  tst.qmd  tst.tst.qmd
examples/: demo_att.py  hello.py  self_hosted_server.md  try.md  try.qmd
src/attachments/: __init__.py  config.py  core.py  deps.py  dsl.py  server.py  service.py  tst.py  unpack.py  utils.py
src/attachments/processors/: __init__.py  pdf.py  text.py  xlsx.py
tests/: test_att_core.py  test_import.py
